# meteor

./: Cargo.toml  LICENSE  README.md
lua/: db.lua  plugin_host.lua  utils.lua
lua/plugins/: core.lua  jisho.lua  lastfm.lua  wanikani.lua  weather.lua
src/: errors.rs  main.rs  util.rs
